<resources>
    <string name="app_name">Company Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="email">email</string>
    <string name="email_hint">john@mail.czom</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
    <string name="dismissals">Dismissals</string>
    <string name="events">Events</string>
    <string name="vacations">Vacations</string>
    <string name="users">Users</string>
    <string name="expand">Expand all</string>
</resources>